--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="root" class="container"></div>
+		<div id="root"></div>
 	</body>
 	<script src="tsparticles.engine.min.js"></script>
 </html>
